--- a/content.html
+++ b/content.html
@@ -16,108 +16,132 @@
     <div id="mainContainer">
 
         <h1> Cake </h1>
-        <div id="containerClothing">
+        <div id="containerCake">
              <div id="box">
                 <a href="#">
-                    <img src="img.jpg" alt="">
+                    <img src="img/red_velvet.jpg" alt="">
                     <div id="details">
-                        <h3></h3>
-                        <h4></h4>
-                        <h2></h2>
+                        <h3>Red Velvet</h3>
+                        <h4>Cake</h4>
+                        <h2>Rp 20.000</h2>
                     </div>
                 </a>
              </div>
              <div id="box">
                 <a href="#">
-                    <img src="img.jpg" alt="">
+                    <img src="img/chese_cake.jpg" alt="">
                     <div id="details">
-                        <h3></h3>
-                        <h4></h4>
-                        <h2></h2>
+                        <h3>Cheese</h3>
+                        <h4>Cake</h4>
+                        <h2>Rp 35.000</h2>
                     </div>
                 </a>
              </div>
              <div id="box">
                 <a href="#">
-                    <img src="img.jpg" alt="">
+                    <img src="img/chocolate_cake.jpg" alt="">
                     <div id="details">
-                        <h3></h3>
-                        <h4></h4>
-                        <h2></h2>
+                        <h3>Chocolate</h3>
+                        <h4>Cake</h4>
+                        <h2>Rp 30.000</h2>
                     </div>
                 </a>
              </div>
              <div id="box">
                 <a href="#">
-                    <img src="img.jpg" alt="">
+                    <img src="img/tiramisu_cake.jpg" alt="">
                     <div id="details">
-                        <h3></h3>
-                        <h4></h4>
-                        <h2></h2>
-                    </div>
-                </a>
-             </div>
-             <div id="box">
-                <a href="#">
-                    <img src="img.jpg" alt="">
-                    <div id="details">
-                        <h3></h3>
-                        <h4></h4>
-                        <h2></h2>
+                        <h3>Tiramisu</h3>
+                        <h4>Cake</h4>
+                        <h2>Rp 35.000</h2>
                     </div>
                 </a>
              </div>
         </div>
 
-        <h1> Puding </h1>
-        <div id="containerAccessories">
+        <h1> Donut </h1>
+        <div id="containerCake">
             <div id="box">
                 <a href="#">
-                    <img src="img.jpg" alt="">
+                    <img src="img/strawberry_donuts.jpg" alt="">
                     <div id="details">
-                        <h3></h3>
-                        <h4></h4>
-                        <h2></h2>
+                        <h3>Strawberry</h3>
+                        <h4>Donut</h4>
+                        <h2>Rp 11.000</h2>
                     </div>
                 </a>
              </div>
              <div id="box">
                 <a href="#">
-                    <img src="img.jpg" alt="">
+                    <img src="img/glazed_donuts.jpg" alt="">
                     <div id="details">
-                        <h3></h3>
-                        <h4></h4>
-                        <h2></h2>
+                        <h3>Glazed</h3>
+                        <h4>Donut</h4>
+                        <h2>Rp 11.000</h2>
                     </div>
                 </a>
              </div>
              <div id="box">
                 <a href="#">
-                    <img src="img.jpg" alt="">
+                    <img src="img/cookies_and_cream_donuts.jpg" alt="">
                     <div id="details">
-                        <h3></h3>
-                        <h4></h4>
-                        <h2></h2>
+                        <h3>Cookies & Cream</h3>
+                        <h4>Donut</h4>
+                        <h2>Rp 12.000</h2>
                     </div>
                 </a>
              </div>
              <div id="box">
                 <a href="#">
-                    <img src="img.jpg" alt="">
+                    <img src="img/cream_donuts.jpg" alt="">
                     <div id="details">
-                        <h3></h3>
-                        <h4></h4>
-                        <h2></h2>
+                        <h3>Cream</h3>
+                        <h4>Donut</h4>
+                        <h2>Rp 12.000</h2>
+                    </div>
+                </a>
+             </div>
+        </div>
+
+        <h1> Pudding </h1>
+        <div id="containerCake">
+            <div id="box">
+                <a href="#">
+                    <img src="img/chocolate.jpg" alt="">
+                    <div id="details">
+                        <h3>Chocolate</h3>
+                        <h4>Pudding</h4>
+                        <h2>Rp 15.000</h2>
                     </div>
                 </a>
              </div>
              <div id="box">
                 <a href="#">
-                    <img src="img.jpg" alt="">
+                    <img src="img/vanilla.jpg" alt="">
                     <div id="details">
-                        <h3></h3>
-                        <h4></h4>
-                        <h2></h2>
+                        <h3>Vanilla</h3>
+                        <h4>Pudding</h4>
+                        <h2>Rp 15.000</h2>
+                    </div>
+                </a>
+             </div>
+             <div id="box">
+                <a href="#">
+                    <img src="img/strawberry.jpg" alt="">
+                    <div id="details">
+                        <h3>Strawberry</h3>
+                        <h4>Pudding</h4>
+                        <h2>Rp 17.000</h2>
+                    </div>
+                </a>
+             </div>
+             <div id="box">
+                <a href="#">
+                    <img src="img/blueberry.jpg" alt="">
+                    <div id="details">
+                        <h3>Blueberry</h3>
+                        <h4>Pudding</h4>
+                        <h2>Rp 17.000</h2>
                     </div>
                 </a>
              </div>
