--- a/footer.html
+++ b/footer.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="theme-color" content="#FF90BC">
     <title> SweetHaven </title>
     <!-- EXTERNAL LINKS -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet">
@@ -19,8 +20,8 @@
                 <div id="webFooter">
                     <h3> online store </h3>
                     <p> CAKE </p>
-                    <p> DONAT </p>
-                    <p> PUDING </p>
+                    <p> DONUT </p>
+                    <p> PUDDING </p>
                 </div>
                 <div id="webFooter">
                     <h3> helpful link </h3>
@@ -43,7 +44,7 @@
                     <p> INDONESIA </p>
                 </div>
             </div>
-            <div id="credit"><a href="#"> © Kelompok 9 </a> &nbsp&nbsp&nbsp | &nbsp&nbsp&nbsp <a href="#" target="_blank"> SweetHaven </a></div>
+            <div id="credit"> © Kelompok 9 &nbsp&nbsp&nbsp | &nbsp&nbsp&nbsp SweetHaven </div>
         </section>
 
     </footer>
