--- a/header.html
+++ b/header.html
@@ -24,13 +24,14 @@
                 <div id="shopName"><a href="index.html"> <b>Sweet</b>Haven </a></div>
                     <!-- COLLCETIONS ON WEBSITE -->
                     <div id="collection">
-                        <div id="clothing"><a href="#"> CAKE </a></div>
-                        <div id="accessories"><a href="#"> DONAT </a></div>
+                        <div id="cake"><a href="#">CAKE</a></div>
+                        <div id="donut"><a href="#">DONUT</a></div>
+                        <div id="pudding"><a href="#">PUDDING</a></div>
                     </div>
                     <!-- SEARCH SECTION -->
                     <div id="search">
                         <i class="fas fa-search search"></i>
-                        <input type="text" id="input" name="searchBox" placeholder="Search for Cake, Donat and Puding">
+                        <input type="text" id="input" name="searchBox" placeholder="Search for Cake, Donut and Pudding">
                     </div>
                     <!-- USER SECTION (CART AND USER ICON) -->
                     <div id="user">
