--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="theme-color" content="#FF90BC">
     <!-- <link rel="stylesheet" href="/style.css"> -->
     <title> SweetHaven </title>
     <!-- favicon -->
     <link rel="icon" href="img/logo.jpg" type="image/gif" sizes="16x16">
     <!-- header links -->
+    <meta
+      name="title"
+      content="SweetHaven" />
+    <meta name="description" content="© Kelompok 9" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://sweethaven.vercel.app/" />
+    <meta
+      property="og:title"
+      content="SweetHaven" />
+      <meta name="description" content="© Kelompok 9" />
+    <meta property="og:image" content="https://iili.io/2GftsnI.md.jpg" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="og:url" content="https://sweethaven.vercel.app/" />
+    <meta
+      property="twitter:title"
+      content="SweetHaven" />
+      <meta name="description" content="© Kelompok 9" />
+      <meta property="og:image" content="https://iili.io/2GftsnI.md.jpg" />
+
     <script src="https://kit.fontawesome.com/4a3b1f73a2.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <!-- slider links -->
