--- a/content.html
+++ b/content.html
@@ -57,6 +57,16 @@
                     </div>
                 </a>
              </div>
+             <div id="box">
+                <a href="#">
+                    <img src="img/vanilla_cake.jpg" alt="">
+                    <div id="details">
+                        <h3>Vanilla</h3>
+                        <h4>Cake</h4>
+                        <h2>Rp 37.000</h2>
+                    </div>
+                </a>
+             </div>
         </div>
 
         <h1> Donut </h1>
@@ -101,6 +111,16 @@
                     </div>
                 </a>
              </div>
+             <div id="box">
+                <a href="#">
+                    <img src="img/chocolate_donuts.jpg" alt="">
+                    <div id="details">
+                        <h3>Chocolate</h3>
+                        <h4>Donut</h4>
+                        <h2>Rp 10.000</h2>
+                    </div>
+                </a>
+             </div>
         </div>
 
         <h1> Pudding </h1>
@@ -142,6 +162,16 @@
                         <h3>Blueberry</h3>
                         <h4>Pudding</h4>
                         <h2>Rp 17.000</h2>
+                    </div>
+                </a>
+             </div>
+             <div id="box">
+                <a href="#">
+                    <img src="img/mango_pudding.jpg" alt="">
+                    <div id="details">
+                        <h3>Mango</h3>
+                        <h4>Pudding</h4>
+                        <h2>Rp 15.000</h2>
                     </div>
                 </a>
              </div>
