--- a/content.html
+++ b/content.html
@@ -1,181 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title> SweetHaven </title>
-    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>SweetHaven</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato&display=swap"
+      rel="stylesheet"
+    />
     <!-- favicon -->
-    <link rel="icon" href="https://yt3.ggpht.com/a/AGF-l78km1YyNXmF0r3-0CycCA0HLA_i6zYn_8NZEg=s900-c-k-c0xffffffff-no-rj-mo" type="image/gif" sizes="16x16">
+    <link
+      rel="icon"
+      href="https://yt3.ggpht.com/a/AGF-l78km1YyNXmF0r3-0CycCA0HLA_i6zYn_8NZEg=s900-c-k-c0xffffffff-no-rj-mo"
+      type="image/gif"
+      sizes="16x16"
+    />
 
-    <link rel="stylesheet" href="css/content.css">
-
-</head>
-<body>
+    <link rel="stylesheet" href="css/content.css" />
+  </head>
+  <body>
+    
     <div id="mainContainer">
-
-        <h1> Cake </h1>
-        <div id="containerCake">
-             <div id="box">
-                <a href="#">
-                    <img src="img/red_velvet.jpg" alt="">
-                    <div id="details">
-                        <h3>Red Velvet</h3>
-                        <h4>Cake</h4>
-                        <h2>Rp 20.000</h2>
-                    </div>
-                </a>
-             </div>
-             <div id="box">
-                <a href="#">
-                    <img src="img/chese_cake.jpg" alt="">
-                    <div id="details">
-                        <h3>Cheese</h3>
-                        <h4>Cake</h4>
-                        <h2>Rp 35.000</h2>
-                    </div>
-                </a>
-             </div>
-             <div id="box">
-                <a href="#">
-                    <img src="img/chocolate_cake.jpg" alt="">
-                    <div id="details">
-                        <h3>Chocolate</h3>
-                        <h4>Cake</h4>
-                        <h2>Rp 30.000</h2>
-                    </div>
-                </a>
-             </div>
-             <div id="box">
-                <a href="#">
-                    <img src="img/tiramisu_cake.jpg" alt="">
-                    <div id="details">
-                        <h3>Tiramisu</h3>
-                        <h4>Cake</h4>
-                        <h2>Rp 35.000</h2>
-                    </div>
-                </a>
-             </div>
-             <div id="box">
-                <a href="#">
-                    <img src="img/vanilla_cake.jpg" alt="">
-                    <div id="details">
-                        <h3>Vanilla</h3>
-                        <h4>Cake</h4>
-                        <h2>Rp 37.000</h2>
-                    </div>
-                </a>
-             </div>
+      <h1>Cake</h1>
+      <div id="containerCake">
+        <div id="box">
+          <a href="#">
+            <img src="img/red_velvet.jpg" alt="" />
+            <div id="details">
+              <h3>Red Velvet</h3>
+              <h4>Cake</h4>
+              <h2>Rp 20.000</h2>
+            </div>
+          </a>
         </div>
-
-        <h1> Donut </h1>
-        <div id="containerCake">
-            <div id="box">
-                <a href="#">
-                    <img src="img/strawberry_donuts.jpg" alt="">
-                    <div id="details">
-                        <h3>Strawberry</h3>
-                        <h4>Donut</h4>
-                        <h2>Rp 11.000</h2>
-                    </div>
-                </a>
-             </div>
-             <div id="box">
-                <a href="#">
-                    <img src="img/glazed_donuts.jpg" alt="">
-                    <div id="details">
-                        <h3>Glazed</h3>
-                        <h4>Donut</h4>
-                        <h2>Rp 11.000</h2>
-                    </div>
-                </a>
-             </div>
-             <div id="box">
-                <a href="#">
-                    <img src="img/cookies_and_cream_donuts.jpg" alt="">
-                    <div id="details">
-                        <h3>Cookies & Cream</h3>
-                        <h4>Donut</h4>
-                        <h2>Rp 12.000</h2>
-                    </div>
-                </a>
-             </div>
-             <div id="box">
-                <a href="#">
-                    <img src="img/cream_donuts.jpg" alt="">
-                    <div id="details">
-                        <h3>Cream</h3>
-                        <h4>Donut</h4>
-                        <h2>Rp 12.000</h2>
-                    </div>
-                </a>
-             </div>
-             <div id="box">
-                <a href="#">
-                    <img src="img/chocolate_donuts.jpg" alt="">
-                    <div id="details">
-                        <h3>Chocolate</h3>
-                        <h4>Donut</h4>
-                        <h2>Rp 10.000</h2>
-                    </div>
-                </a>
-             </div>
+        <div id="box">
+          <a href="#">
+            <img src="img/chese_cake.jpg" alt="" />
+            <div id="details">
+              <h3>Cheese</h3>
+              <h4>Cake</h4>
+              <h2>Rp 35.000</h2>
+            </div>
+          </a>
         </div>
-
-        <h1> Pudding </h1>
-        <div id="containerCake">
-            <div id="box">
-                <a href="#">
-                    <img src="img/chocolate.jpg" alt="">
-                    <div id="details">
-                        <h3>Chocolate</h3>
-                        <h4>Pudding</h4>
-                        <h2>Rp 15.000</h2>
-                    </div>
-                </a>
-             </div>
-             <div id="box">
-                <a href="#">
-                    <img src="img/vanilla.jpg" alt="">
-                    <div id="details">
-                        <h3>Vanilla</h3>
-                        <h4>Pudding</h4>
-                        <h2>Rp 15.000</h2>
-                    </div>
-                </a>
-             </div>
-             <div id="box">
-                <a href="#">
-                    <img src="img/strawberry.jpg" alt="">
-                    <div id="details">
-                        <h3>Strawberry</h3>
-                        <h4>Pudding</h4>
-                        <h2>Rp 17.000</h2>
-                    </div>
-                </a>
-             </div>
-             <div id="box">
-                <a href="#">
-                    <img src="img/blueberry.jpg" alt="">
-                    <div id="details">
-                        <h3>Blueberry</h3>
-                        <h4>Pudding</h4>
-                        <h2>Rp 17.000</h2>
-                    </div>
-                </a>
-             </div>
-             <div id="box">
-                <a href="#">
-                    <img src="img/mango_pudding.jpg" alt="">
-                    <div id="details">
-                        <h3>Mango</h3>
-                        <h4>Pudding</h4>
-                        <h2>Rp 15.000</h2>
-                    </div>
-                </a>
-             </div>
+        <div id="box">
+          <a href="#">
+            <img src="img/chocolate_cake.jpg" alt="" />
+            <div id="details">
+              <h3>Chocolate</h3>
+              <h4>Cake</h4>
+              <h2>Rp 30.000</h2>
+            </div>
+          </a>
         </div>
+        <div id="box">
+          <a href="#">
+            <img src="img/tiramisu_cake.jpg" alt="" />
+            <div id="details">
+              <h3>Tiramisu</h3>
+              <h4>Cake</h4>
+              <h2>Rp 35.000</h2>
+            </div>
+          </a>
+        </div>
+        <div id="box">
+          <a href="#">
+            <img src="img/vanilla_cake.jpg" alt="" />
+            <div id="details">
+              <h3>Vanilla</h3>
+              <h4>Cake</h4>
+              <h2>Rp 37.000</h2>
+            </div>
+          </a>
+        </div>
+        <div id="donut"></div>
+      </div>
+
+      <h1>Donut</h1>
+      <div id="containerCake">
+        <div id="box">
+          <a href="#">
+            <img src="img/strawberry_donuts.jpg" alt="" />
+            <div id="details">
+              <h3>Strawberry</h3>
+              <h4>Donut</h4>
+              <h2>Rp 11.000</h2>
+            </div>
+          </a>
+        </div>
+        <div id="box">
+          <a href="#">
+            <img src="img/glazed_donuts.jpg" alt="" />
+            <div id="details">
+              <h3>Glazed</h3>
+              <h4>Donut</h4>
+              <h2>Rp 11.000</h2>
+            </div>
+          </a>
+        </div>
+        <div id="box">
+          <a href="#">
+            <img src="img/cookies_and_cream_donuts.jpg" alt="" />
+            <div id="details">
+              <h3>Cookies & Cream</h3>
+              <h4>Donut</h4>
+              <h2>Rp 12.000</h2>
+            </div>
+          </a>
+        </div>
+        <div id="box">
+          <a href="#">
+            <img src="img/cream_donuts.jpg" alt="" />
+            <div id="details">
+              <h3>Cream</h3>
+              <h4>Donut</h4>
+              <h2>Rp 12.000</h2>
+            </div>
+          </a>
+        </div>
+        <div id="box">
+          <a href="#">
+            <img src="img/chocolate_donuts.jpg" alt="" />
+            <div id="details">
+              <h3>Chocolate</h3>
+              <h4>Donut</h4>
+              <h2>Rp 10.000</h2>
+            </div>
+          </a>
+        </div>
+        <div id="pudding"></div>
+      </div>
+
+      <h1>Pudding</h1>
+      <div id="containerCake">
+        <div id="box">
+          <a href="#">
+            <img src="img/chocolate.jpg" alt="" />
+            <div id="details">
+              <h3>Chocolate</h3>
+              <h4>Pudding</h4>
+              <h2>Rp 15.000</h2>
+            </div>
+          </a>
+        </div>
+        <div id="box">
+          <a href="#">
+            <img src="img/vanilla.jpg" alt="" />
+            <div id="details">
+              <h3>Vanilla</h3>
+              <h4>Pudding</h4>
+              <h2>Rp 15.000</h2>
+            </div>
+          </a>
+        </div>
+        <div id="box">
+          <a href="#">
+            <img src="img/strawberry.jpg" alt="" />
+            <div id="details">
+              <h3>Strawberry</h3>
+              <h4>Pudding</h4>
+              <h2>Rp 17.000</h2>
+            </div>
+          </a>
+        </div>
+        <div id="box">
+          <a href="#">
+            <img src="img/blueberry.jpg" alt="" />
+            <div id="details">
+              <h3>Blueberry</h3>
+              <h4>Pudding</h4>
+              <h2>Rp 17.000</h2>
+            </div>
+          </a>
+        </div>
+        <div id="box">
+          <a href="#">
+            <img src="img/mango_pudding.jpg" alt="" />
+            <div id="details">
+              <h3>Mango</h3>
+              <h4>Pudding</h4>
+              <h2>Rp 15.000</h2>
+            </div>
+          </a>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
