--- a/footer.html
+++ b/footer.html
@@ -19,13 +19,13 @@
                 
                 <div id="webFooter">
                     <h3> online store </h3>
-                    <p> CAKE </p>
-                    <p> DONUT </p>
-                    <p> PUDDING </p>
+                    <a href="#cake"><p> cake </p></a>
+                    <a href="#donut"><p> donut </p></a>
+                    <a href="#pudding"><p> pudding </p></a>
                 </div>
                 <div id="webFooter">
                     <h3> helpful link </h3>
-                    <p> home </p>
+                    <a href="#cake"><p> home </p></a>
                     <p> about </p>
                     <p> contact </p>
                 </div>
