--- a/header.html
+++ b/header.html
@@ -24,9 +24,9 @@
                 <div id="shopName"><a href="index.html"> <b>Sweet</b>Haven </a></div>
                     <!-- COLLCETIONS ON WEBSITE -->
                     <div id="collection">
-                        <div id="cake"><a href="#">CAKE</a></div>
-                        <div id="donut"><a href="#">DONUT</a></div>
-                        <div id="pudding"><a href="#">PUDDING</a></div>
+                        <div><a href="#cake">CAKE</a></div>
+                        <div><a href="#donut">DONUT</a></div>
+                        <div><a href="#pudding">PUDDING</a></div>
                     </div>
                     <!-- SEARCH SECTION -->
                     <div id="search">
