--- a/slider.html
+++ b/slider.html
@@ -50,11 +50,12 @@
 </head>
 <body>
     <section>
+        <div id="cake"></div>
             <div id="containerSlider">
-                <div id="slidingImage"> <img src="img/img1.png" alt="image1"> </div>
-                <div id="slidingImage"> <img src="img/img2.png" alt="image2"> </div>
-                <div id="slidingImage"> <img src="img/img3.png" alt="image3"> </div>
-                <div id="slidingImage"> <img src="img/img4.png" alt="image4"> </div>
+                <div id="slidingImage"> <img src="img/image1.jpg" alt="image1"> </div>
+                <div id="slidingImage"> <img src="img/image2.jpg" alt="image2"> </div>
+                <div id="slidingImage"> <img src="img/image3.jpg" alt="image3"> </div>
+                <div id="slidingImage"> <img src="img/image4.jpg" alt="image4"> </div>
             </div>
     </section>
 </body>
