--- a/content.html
+++ b/content.html
@@ -25,7 +25,7 @@
       <h1>Cake</h1>
       <div id="containerCake">
         <div id="box">
-          <a href="#">
+          <a href="product/red-velvet-cake.html">
             <img src="img/red_velvet.jpg" alt="" />
             <div id="details">
               <h3>Red Velvet</h3>
