--- a/content.html
+++ b/content.html
@@ -26,7 +26,7 @@
       <div id="containerCake">
         <div id="box">
           <a href="product/red-velvet-cake.html">
-            <img src="img/red_velvet.jpg" alt="" />
+            <img src="img/red_velvet_cake.jpg" alt="" />
             <div id="details">
               <h3>Red Velvet</h3>
               <h4>Cake</h4>
@@ -35,7 +35,7 @@
           </a>
         </div>
         <div id="box">
-          <a href="#">
+          <a href="product/cheese-cake.html">
             <img src="img/chese_cake.jpg" alt="" />
             <div id="details">
               <h3>Cheese</h3>
@@ -45,7 +45,7 @@
           </a>
         </div>
         <div id="box">
-          <a href="#">
+          <a href="product/chocolate-cake.html">
             <img src="img/chocolate_cake.jpg" alt="" />
             <div id="details">
               <h3>Chocolate</h3>
@@ -55,7 +55,7 @@
           </a>
         </div>
         <div id="box">
-          <a href="#">
+          <a href="product/tiramisu-cake.html">
             <img src="img/tiramisu_cake.jpg" alt="" />
             <div id="details">
               <h3>Tiramisu</h3>
@@ -65,7 +65,7 @@
           </a>
         </div>
         <div id="box">
-          <a href="#">
+          <a href="product/vanilla-cake.html">
             <img src="img/vanilla_cake.jpg" alt="" />
             <div id="details">
               <h3>Vanilla</h3>
@@ -80,8 +80,8 @@
       <h1>Donut</h1>
       <div id="containerCake">
         <div id="box">
-          <a href="#">
-            <img src="img/strawberry_donuts.jpg" alt="" />
+          <a href="product/strawberry-donut.html">
+            <img src="img/strawberry_donut.jpg" alt="" />
             <div id="details">
               <h3>Strawberry</h3>
               <h4>Donut</h4>
@@ -90,8 +90,8 @@
           </a>
         </div>
         <div id="box">
-          <a href="#">
-            <img src="img/glazed_donuts.jpg" alt="" />
+          <a href="product/glazed-donut.html">
+            <img src="img/glazed_donut.jpg" alt="" />
             <div id="details">
               <h3>Glazed</h3>
               <h4>Donut</h4>
@@ -100,8 +100,8 @@
           </a>
         </div>
         <div id="box">
-          <a href="#">
-            <img src="img/cookies_and_cream_donuts.jpg" alt="" />
+          <a href="product/cookies-&-cream-donut.html">
+            <img src="img/cookies_&_cream_donut.jpg" alt="" />
             <div id="details">
               <h3>Cookies & Cream</h3>
               <h4>Donut</h4>
@@ -110,8 +110,8 @@
           </a>
         </div>
         <div id="box">
-          <a href="#">
-            <img src="img/cream_donuts.jpg" alt="" />
+          <a href="product/cream-donut.html">
+            <img src="img/cream_donut.jpg" alt="" />
             <div id="details">
               <h3>Cream</h3>
               <h4>Donut</h4>
@@ -120,8 +120,8 @@
           </a>
         </div>
         <div id="box">
-          <a href="#">
-            <img src="img/chocolate_donuts.jpg" alt="" />
+          <a href="product/chocolate-donut.html">
+            <img src="img/chocolate_donut.jpg" alt="" />
             <div id="details">
               <h3>Chocolate</h3>
               <h4>Donut</h4>
@@ -135,8 +135,8 @@
       <h1>Pudding</h1>
       <div id="containerCake">
         <div id="box">
-          <a href="#">
-            <img src="img/chocolate.jpg" alt="" />
+          <a href="product/chocolate-pudding.html">
+            <img src="img/chocolate_pudding.jpg" alt="" />
             <div id="details">
               <h3>Chocolate</h3>
               <h4>Pudding</h4>
@@ -145,8 +145,8 @@
           </a>
         </div>
         <div id="box">
-          <a href="#">
-            <img src="img/vanilla.jpg" alt="" />
+          <a href="product/vanilla-pudding.html">
+            <img src="img/vanilla_pudding.jpg" alt="" />
             <div id="details">
               <h3>Vanilla</h3>
               <h4>Pudding</h4>
@@ -155,8 +155,8 @@
           </a>
         </div>
         <div id="box">
-          <a href="#">
-            <img src="img/strawberry.jpg" alt="" />
+          <a href="product/strawberry-pudding.html">
+            <img src="img/strawberry_pudding.jpg" alt="" />
             <div id="details">
               <h3>Strawberry</h3>
               <h4>Pudding</h4>
@@ -165,8 +165,8 @@
           </a>
         </div>
         <div id="box">
-          <a href="#">
-            <img src="img/blueberry.jpg" alt="" />
+          <a href="product/blueberry-pudding.html">
+            <img src="img/blueberry_pudding.jpg" alt="" />
             <div id="details">
               <h3>Blueberry</h3>
               <h4>Pudding</h4>
@@ -175,7 +175,7 @@
           </a>
         </div>
         <div id="box">
-          <a href="#">
+          <a href="product/mango-pudding.html">
             <img src="img/mango_pudding.jpg" alt="" />
             <div id="details">
               <h3>Mango</h3>
