--- a/index.html
+++ b/index.html
@@ -1,115 +1,111 @@
 <!DOCTYPE html>
 <html lang="en" translate="no">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="theme-color" content="#FF90BC">
-    <!-- <link rel="stylesheet" href="/style.css"> -->
-    <title> SweetHaven </title>
-    <!-- favicon -->
-    <link rel="icon" href="img/logo.jpg" type="image/gif" sizes="16x16">
-    <!-- header links -->
-    <meta
-      name="title"
-      content="SweetHaven" />
-    <meta name="description" content="© Kelompok 9" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://sweethaven.vercel.app/" />
-    <meta
-      property="og:title"
-      content="SweetHaven" />
-      <meta name="description" content="© Kelompok 9" />
-    <meta property="og:image" content="https://iili.io/2GftsnI.md.jpg" />
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="og:url" content="https://sweethaven.vercel.app/" />
-    <meta
-      property="twitter:title"
-      content="SweetHaven" />
-      <meta name="description" content="© Kelompok 9" />
-      <meta property="og:image" content="https://iili.io/2GftsnI.md.jpg" />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <meta name="theme-color" content="#FF90BC" />
+        <!-- <link rel="stylesheet" href="/style.css"> -->
+        <title>SweetHaven</title>
+        <!-- favicon -->
+        <link rel="icon" href="img/logo.jpg" type="image/gif" sizes="16x16" />
+        <!-- header links -->
+        <meta name="title" content="SweetHaven" />
+        <meta name="description" content="© Kelompok 9" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://sweethaven.vercel.app/" />
+        <meta property="og:title" content="SweetHaven" />
+        <meta name="description" content="© Kelompok 9" />
+        <meta property="og:image" content="https://iili.io/2GftsnI.md.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="og:url" content="https://sweethaven.vercel.app/" />
+        <meta property="twitter:title" content="SweetHaven" />
+        <meta name="description" content="© Kelompok 9" />
+        <meta property="og:image" content="https://iili.io/2GftsnI.md.jpg" />
 
-    <script src="https://kit.fontawesome.com/4a3b1f73a2.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <!-- slider links -->
-    <!-- <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> -->
-    <script src="js/jQuery3.4.1.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css">
-</head>
+        <script src="https://kit.fontawesome.com/4a3b1f73a2.js"></script>
+        <link
+            href="https://fonts.googleapis.com/css?family=Lato&display=swap"
+            rel="stylesheet"
+        />
+        <!-- slider links -->
+        <!-- <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> -->
+        <script src="js/jQuery3.4.1.js"></script>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css"
+        />
+    </head>
 
-<body>
-    <!-- HEADER -->
-    <div id="1"></div>
+    <body>
+        <!-- HEADER -->
+        <div id="1"></div>
+        <script>
+            load("header.html");
+            function load(url) {
+                req = new XMLHttpRequest();
+                req.open("GET", url, false);
+                req.send(null);
+                document.getElementById(1).innerHTML = req.responseText;
+            }
+        </script>
+        <!-- SLIDER -->
+        <div id="2"></div>
+        <script>
+            load("slider.html");
+            function load(url) {
+                req = new XMLHttpRequest();
+                req.open("GET", url, false);
+                req.send(null);
+                document.getElementById(2).innerHTML = req.responseText;
+            }
+        </script>
+
+        <!-- CONTENT SECTION -->
+        <div id="3"></div>
+        <script>
+            load("content.html");
+            function load(url) {
+                req = new XMLHttpRequest();
+                req.open("GET", url, false);
+                req.send(null);
+                document.getElementById(3).innerHTML = req.responseText;
+            }
+        </script>
+
+        <!-- FOOTER -->
+        <div id="4"></div>
+        <script>
+            load("footer.html");
+            function load(url) {
+                req = new XMLHttpRequest();
+                req.open("GET", url, false);
+                req.send(null);
+                document.getElementById(4).innerHTML = req.responseText;
+            }
+        </script>
+    </body>
+
+    <!-- slider JS START -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script>
-        load("header.html");
-        function load(url)
-        {
-            req = new XMLHttpRequest();
-            req.open("GET", url, false);
-            req.send(null);
-            document.getElementById(1).innerHTML = req.responseText;
-        }
-    </script>
-    <!-- SLIDER -->
-    <div id="2"></div>
-    <script>
-        load("slider.html");
-        function load(url)
-        {
-            req = new XMLHttpRequest();
-            req.open("GET", url, false);
-            req.send(null);
-            document.getElementById(2).innerHTML = req.responseText;
-        }
-    </script>
-
-    <!-- CONTENT SECTION -->
-    <div id="3"></div>
-    <script>
-        load("content.html");
-        function load(url)
-        {
-            req = new XMLHttpRequest();
-            req.open("GET", url, false);
-            req.send(null);
-            document.getElementById(3).innerHTML = req.responseText;
-        }
-    </script>
-
-    <!-- FOOTER -->
-    <div id="4"></div>
-    <script>
-        load("footer.html");
-        function load(url)
-        {
-            req = new XMLHttpRequest();
-            req.open("GET", url, false);
-            req.send(null);
-            document.getElementById(4).innerHTML = req.responseText;
-        }
-    </script>
-
-</body>
-
-<!-- slider JS START -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-<script>
-    $(document).ready(function()
-    {
-    $('#containerSlider').slick({
-        dots: true,
-        infinite: true,
-        slidesToShow: 1,
-        slidesToScroll: 1,
-        autoplay: true,
-        autoplaySpeed: 1500,
+        $(document).ready(function () {
+            $("#containerSlider").slick({
+                dots: true,
+                infinite: true,
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                autoplay: true,
+                autoplaySpeed: 1500,
+            });
         });
-    });
-</script>
-<!-- slider JS ENDS -->
+    </script>
+    <!-- slider JS ENDS -->
 
-<!-- content JS -->
-<script src="content.js"></script>
-
+    <!-- content JS -->
+    <script src="content.js"></script>
 </html>
