--- a/product/cookies-&-cream-donut.html
+++ b/product/cookies-&-cream-donut.html
@@ -36,15 +36,15 @@
     <div id="containerProduct">
         <div id="containerD">
             <div id="imageSection">
-                <img id="imageDetails" src="../img/red_velvet_cake.jpg"></img>
+                <img id="imageDetails" src="../img/cookies_&_cream_donut.jpg"></img>
             </div>
             <div id="productDetails">
-                <h1>Red Velvet</h1>
-                <h4>Cake</h4>
+                <h1>Cookies & Cream</h1>
+                <h4>Donut</h4>
                 <div id="details">
-                    <h3>Rp 20.000</h3>
+                    <h3>Rp 12.000</h3>
                     <h3>Description</h3>
-                    <p>Kue mewah dengan warna merah khas, dilapisi cream cheese frosting yang lembut dan manis. Cocok untuk momen spesial atau sebagai hadiah istimewa.</p>
+                    <p>Donat empuk dengan topping krim cookies and cream yang melimpah, dihiasi remah-remah biskuit favorit Anda. Kombinasi sempurna untuk penggemar rasa manis dan renyah.</p>
                 </div>
                 <div id="button">
                     <button onclick="sendMessage()">Buy Now</button>
@@ -57,7 +57,7 @@
         function sendMessage() {
             const phoneNumber = "6288804036649";
     
-            const defaultMessage = "Halo, saya ingin melakukan pemesanan di *SweetHaven*.\nBerikut adalah rincian pesanan saya:\n \nNama Produk: *Red Velvet* \n \nJenis: *Cake* \n \nHarga: *Rp20.000* \n \nSilakan konfirmasi ketersediaannya.\nTerima kasih!";
+            const defaultMessage = "Halo, saya ingin melakukan pemesanan di *SweetHaven*.\nBerikut adalah rincian pesanan saya:\n \nNama Produk: *Cookies & Cream* \n \nJenis: *Donut* \n \nHarga: *Rp12.000* \n \nSilakan konfirmasi ketersediaannya.\nTerima kasih!";
     
             const whatsappURL = `https://wa.me/${phoneNumber}?text=${encodeURIComponent(defaultMessage)}`;
             window.open(whatsappURL, '_blank');
