--- a/footer.html
+++ b/footer.html
@@ -31,10 +31,10 @@
                 </div>
                 <div id="webFooter">
                     <h3> partners </h3>
-                    <p> Nur Hidayat </p>
-                    <p> Nabilah Auliah Rahman </p>
-                    <p> Alfira Rezky Pratiwi </p>
-                    <p> Muhammad Zaky Asy Syafi'i </p>
+                    <a href="https://wa.me/6287873520868/"><p> Nur Hidayat </p></a>
+                    <a href="https://wa.me/62882019325156/"><p> Nabilah Auliah Rahman </p></a>
+                    <a href="https://wa.me/62887435718573/"><p> Alfira Rezky Pratiwi </p></a>
+                    <a href="https://wa.me/6285796410373/"><p> Muhammad Zaky Asy Syafi'i </p></a>
                 </div>
                 <div id="webFooter">
                     <h3> address </h3>
