--- a/footer.html
+++ b/footer.html
@@ -26,6 +26,7 @@
                 <div id="webFooter">
                     <h3> helpful link </h3>
                     <a href="#cake"><p> home </p></a>
+                    <a href="https://wa.me/6288804036649/"></a>
                     <p> about </p>
                     <p> contact </p>
                 </div>
@@ -38,10 +39,10 @@
                 </div>
                 <div id="webFooter">
                     <h3> address </h3>
-                    <p> UNIVERSITAS </p>
-                    <p> NEGERI </p>
-                    <p> MAKASSAR </p>
-                    <p> INDONESIA </p>
+                    <a href="https://www.instagram.com/unm.makassar"><p> UNIVERSITAS </p></a>
+                    <a href="https://www.instagram.com/unm.makassar"><p> NEGERI </p></a>
+                    <a href="https://www.instagram.com/unm.makassar"><p> MAKASSAR </p></a>
+                    <a href="https://www.instagram.com/unm.makassar"><p> INDONESIA </p></a>
                 </div>
             </div>
             <div id="credit"> © Kelompok 9 &nbsp&nbsp&nbsp | &nbsp&nbsp&nbsp SweetHaven </div>
